Fix: Fix icons not aligning to the bottom of the list element on github pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body{
     flex-direction: column;
 }
 
-.material-symbols-outlined{
+.nav-icon{
     vertical-align: bottom;
 }
 
